--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -12,13 +10,13 @@
 
     <groupId>com.pro-crafting.tools</groupId>
     <artifactId>jsonpretty-web</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <scm>
         <connection>scm:git:git@github.com:pro-crafting/jsonpretty.git</connection>
         <url>https://github.com/pro-crafting/jsonpretty</url>
         <developerConnection>scm:git:git@github.com:pro-crafting/jsonpretty.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>jsonpretty-web-1.0.0</tag>
     </scm>
 
     <properties>
