--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,13 @@
 
     <groupId>com.pro-crafting.tools</groupId>
     <artifactId>jsonpretty-web</artifactId>
-    <version>1.0.1</version>
+    <version>1.1.0-SNAPSHOT</version>
 
     <scm>
         <connection>scm:git:git@github.com:pro-crafting/jsonpretty.git</connection>
         <url>https://github.com/pro-crafting/jsonpretty</url>
         <developerConnection>scm:git:git@github.com:pro-crafting/jsonpretty.git</developerConnection>
-        <tag>jsonpretty-web-1.0.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
