--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
         <file.runner>${project.build.finalName}-runner.jar</file.runner>
 
         <!-- Dependency Versions -->
-        <version.quarkus>0.25.0</version.quarkus>
+        <version.quarkus>1.2.0.Final</version.quarkus>
 
         <!-- Plugin Versions -->
         <version.docker-maven-plugin>0.31.0</version.docker-maven-plugin>
