Update to quarkus 1.8.1.Final Use native as default packaging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 quarkus.log.console.color=false
 
 quarkus.resteasy.metrics.enabled=true
+
+quarkus.container-image.build=true
+quarkus.package.type=native
+quarkus.container-image.name=postremus/jsonpretty-web
+quarkus.container-image.additional-tags=latest
