--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
 
     <properties>
         <!-- Settings -->
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- Port is set during execution of build-helper-maven-plugin:reserve-network-port goal -->
         <it.baseuri>127.0.0.1</it.baseuri>
@@ -34,10 +34,9 @@
         <file.runner>${project.build.finalName}-runner.jar</file.runner>
 
         <!-- Dependency Versions -->
-        <version.quarkus>1.7.0.Final</version.quarkus>
+        <version.quarkus>1.8.1.Final</version.quarkus>
 
         <!-- Plugin Versions -->
-        <version.docker-maven-plugin>0.31.0</version.docker-maven-plugin>
         <version.maven-surefire-plugin>2.21.0</version.maven-surefire-plugin>
         <version.maven-failsafe-plugin>2.21.0</version.maven-failsafe-plugin>
         <version.sonar-maven-plugin>3.4.1.1168</version.sonar-maven-plugin>
@@ -55,9 +54,6 @@
                 <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-maven-plugin</artifactId>
                 <version>${version.quarkus}</version>
-                <configuration>
-                    <uberJar>true</uberJar>
-                </configuration>
                 <executions>
                     <execution>
                         <goals>
@@ -132,6 +128,11 @@
             <artifactId>quarkus-smallrye-metrics</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-container-image-jib</artifactId>
+        </dependency>
+
         <!-- Test dependencies -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -163,101 +164,6 @@
     </dependencies>
 
     <profiles>
-        <profile>
-            <id>docker</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>io.fabric8</groupId>
-                        <artifactId>docker-maven-plugin</artifactId>
-                        <configuration>
-                            <images>
-                                <image>
-                                    <name>${docker.name}</name>
-                                    <run>
-                                        <containerNamePattern>%a-%t-%i</containerNamePattern>
-                                        <ports>
-                                            <port>${docker.published.port}:8080</port>
-                                        </ports>
-                                        <wait>
-                                            <http>
-                                                <url>http://${it.baseuri}:${docker.published.port}/health</url>
-                                                <method>GET</method>
-                                                <status>200</status>
-                                            </http>
-                                            <time>5000</time>
-                                        </wait>
-                                    </run>
-                                    <build>
-                                        <dockerFileDir>${project.basedir}/src/main/docker</dockerFileDir>
-                                        <assembly>
-                                            <basedir>/</basedir>
-                                            <inline>
-                                                <files>
-                                                    <file>
-                                                        <source>${project.build.directory}/${file.runner}</source>
-                                                    </file>
-                                                </files>
-                                            </inline>
-                                        </assembly>
-
-                                        <tags>
-                                            <tag>latest</tag>
-                                            <tag>${project.version}</tag>
-                                        </tags>
-                                    </build>
-                                </image>
-                            </images>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>build</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>build</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>deploy</id>
-                                <phase>deploy</phase>
-                                <goals>
-                                    <goal>push</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>docker-it</id>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>io.fabric8</groupId>
-                            <artifactId>docker-maven-plugin</artifactId>
-                            <executions>
-                                <execution>
-                                    <id>start</id>
-                                    <goals>
-                                        <goal>start</goal>
-                                    </goals>
-                                    <phase>pre-integration-test</phase>
-                                </execution>
-                                <execution>
-                                    <id>stop</id>
-                                    <goals>
-                                        <goal>stop</goal>
-                                    </goals>
-                                    <phase>post-integration-test</phase>
-                                </execution>
-                            </executions>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-            </build>
-        </profile>
         <profile>
             <id>jenkins-ci</id>
             <properties>
