--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <version.quarkus>1.8.1.Final</version.quarkus>
 
         <!-- Plugin Versions -->
+        <version.docker-maven-plugin>0.34.0</version.docker-maven-plugin>
         <version.maven-surefire-plugin>2.21.0</version.maven-surefire-plugin>
         <version.maven-failsafe-plugin>2.21.0</version.maven-failsafe-plugin>
         <version.sonar-maven-plugin>3.4.1.1168</version.sonar-maven-plugin>
@@ -59,27 +60,6 @@
                         <goals>
                             <goal>build</goal>
                         </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>build-helper-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>reserve-network-port</id>
-                        <goals>
-                            <goal>reserve-network-port</goal>
-                        </goals>
-                        <phase>process-resources</phase>
-                        <configuration>
-                            <portNames>
-                                <portName>docker.published.port</portName>
-                            </portNames>
-                            <randomPort>true</randomPort>
-                            <minPortNumber>40000</minPortNumber>
-                            <maxPortNumber>50000</maxPortNumber>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -128,11 +108,6 @@
             <artifactId>quarkus-smallrye-metrics</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-container-image-docker</artifactId>
-        </dependency>
-
         <!-- Test dependencies -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -171,6 +146,74 @@
                 <!--suppress UnresolvedMavenProperty -->
                 <it.baseuri>${env.PC_FQDN}</it.baseuri>
             </properties>
+        </profile>
+        <profile>
+            <id>native</id>
+            <activation>
+                <property>
+                    <name>native</name>
+                </property>
+            </activation>
+            <properties>
+                <quarkus.package.type>native</quarkus.package.type>
+            </properties>
+        </profile>
+        <profile>
+            <id>docker</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>io.fabric8</groupId>
+                        <artifactId>docker-maven-plugin</artifactId>
+                        <configuration>
+                            <images>
+                                <image>
+                                    <name>${docker.name}</name>
+                                    <run>
+                                        <containerNamePattern>%a-%t-%i</containerNamePattern>
+                                        <ports>
+                                            <port>${docker.published.port}:8080</port>
+                                        </ports>
+                                        <wait>
+                                            <http>
+                                                <url>http://${it.baseuri}:${docker.published.port}/health</url>
+                                                <method>GET</method>
+                                                <status>200</status>
+                                            </http>
+                                            <time>5000</time>
+                                        </wait>
+                                    </run>
+                                    <build>
+                                        <dockerFile>${project.basedir}/src/main/docker/Dockerfile</dockerFile>
+                                        <contextDir>${project.basedir}</contextDir>
+
+                                        <tags>
+                                            <tag>latest</tag>
+                                            <tag>${project.version}</tag>
+                                        </tags>
+                                    </build>
+                                </image>
+                            </images>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>build</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>build</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>deploy</id>
+                                <phase>deploy</phase>
+                                <goals>
+                                    <goal>push</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
 </project>
