--- a/pom.xml
+++ b/pom.xml
@@ -92,12 +92,12 @@
     </dependencyManagement>
 
     <dependencies>
-        <!-- Quarkus Extensions -->
         <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-jackson</artifactId>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
         </dependency>
 
+        <!-- Quarkus Extensions -->
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-smallrye-health</artifactId>
