--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 quarkus.log.console.color=false
 quarkus.http.cors=true
+quarkus.native.additional-build-args =-H:ResourceConfigurationFiles=resources-config.json
