--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
-quarkus.log.console.color=false
 quarkus.http.cors=true
 quarkus.native.additional-build-args =-H:ResourceConfigurationFiles=resources-config.json
+
+quarkus.container-image.build=true
+version=${project.version}
+quarkus.container-image.additional-tags=latest,${version}
+quarkus.container-image.image=postremus/jsonpretty-web
