--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,3 +29,9 @@ jobs:
           base64 --decode MAVEN_SIGNING_KEY_FILE.base64 > MAVEN_SIGNING_KEY_FILE.bin
           gpg --batch --fast-import MAVEN_SIGNING_KEY_FILE.bin
           mvn -Dquarkus.container-image.push=true -Dquarkus.container-image.username=$DOCKER_IO_USERNAME -Dquarkus.container-image.password=$DOCKER_IO_TOKEN deploy -s cd/settings.xml -P sign,native
+      - name: Sonar
+        env:
+          SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          mvn org.jacoco:jacoco-maven-plugin:prepare-agent org.apache.maven.plugins:maven-surefire-plugin:test org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
